--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
     "lint:prettier": "prettier --check ./src",
     "lint:fix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix",
+    "ace": "ace",
     "new": "plop",
     "prepare": "husky install"
   },
@@ -38,12 +39,14 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.2.0",
+    "husky": "^7.0.0",
     "nuxt-windicss": "^2",
     "plop": "^3.0.5",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "quark.tools": "https://github.com/Seterium/quark.tools",
     "sass": "^1.50.0",
     "sass-loader": "10",
     "stylelint": "^14.1.0",
@@ -51,7 +54,6 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard": "^24.0.0",
-    "stylelint-order": "^5.0.0",
-    "husky": "^7.0.0"
+    "stylelint-order": "^5.0.0"
   }
 }
